--- a/.babelrc
+++ b/.babelrc
@@ -2,4 +2,5 @@
   "presets": ["next/babel"],
   "plugins": [["babel-plugin-styled-components"
   , { "ssr": true }]]
+  // "plugins": [["styled-components", { "ssr": true, "displayName": true }]]
 }
