--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "prettier": "2.6.2"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
